<resources>
    <string name="title_activity_sign_in">Sign-in</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_in_username">User Name / Phone # (+1555&#8230;)</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_new_account">Create New Account</string>
    <string name="sign_in_forgot_password">Forgot Your Password?</string>
    <string name="sign_in_show_password">show</string>
    <string name="sign_in_hide_password">hide</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_mfa">MFA Code</string>
    <string name="title_activity_sign_up_confirm">Confirm Account</string>
    <string name="title_dialog_sign_up_failed">Sign Up Failed</string>
    <string name="forgot_password_header">Forgot your password?</string>
    <string name="forgot_password_body">Set your new password with the verification code that was sent to you.</string>
    <string name="forgot_password_input_code_hint">Verification code</string>
    <string name="forgot_password_button_hint">Set password</string>
    <string name="force_change_password_button_hint">Set password</string>
    <string name="mfa_header">MFA verification is required to authenticate.</string>
    <string name="mfa_code_sent_message">Code sent.</string>
    <string name="verify_button_text">Verify</string>
    <string name="username_text">Username</string>
    <string name="given_name_text">Given name</string>
    <string name="email_address_text">Email address</string>
    <string name="phone_number_text">Phone number (+15551234567)</string>
    <string name="sign_up_header">Enter your information to sign up.</string>
    <string name="sign_up_confirm_code">Confirmation code</string>
    <string name="sign_up_confirm_text">Confirm</string>
    <string name="sign_up_confirm_code_sent">A confirmation code was sent to</string>
    <string name="sign_up_confirm_enter_code">Please enter the code below to confirm your account.</string>
    <string name="sign_up_confirm_title">Confirm your account</string>
    <string name="password_change_success">Password change succeeded.</string>
    <string name="password_change_failed">Password change failed.</string>
    <string name="sign_up_success">Sign up succeeded.</string>
    <string name="sign_up_failed">Sign up failed.</string>
    <string name="login_failed">Login failed.</string>
    <string name="sign_up_confirm_success">Sign up confirmation succeeded.</string>
    <string name="sign_up_confirm_failed">Sign up confirmation failed.</string>
    <string name="user_does_not_exist">The provided username does not exist.</string>
    <string name="incorrect_username_or_password">The provided username or password is incorrect.</string>
    <string name="password_change_no_verification_failed">Cannot reset password without registered/verified email or phone number</string>
    <string name="mfa_code_empty">MFA Code is empty.</string>
    <string name="mfa_failed">MFA Failed.</string>
    <string name="password_length_validation_failed">Password should have 6 or more characters.</string>
    <string name="password_length_validation_failed_variable">Password should have %d or more characters.</string>
    <string name="sign_up_username_missing">Missing username.</string>
    <string name="sign_up_confirm_code_missing">Sign Up Confirmation code is missing.</string>
    <string name="sign_up_in_progress">Sign up in progress</string>
    <string name="please_wait">Please wait</string>
    <string name="force_change_password_header">Please set a new password</string>
    <string name="force_change_password_body">The password on the account must be changed to continue</string>
    <string name="title_activity_force_change_password">Force Change Password</string>
</resources>
