<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:com.amazonaws.mobile.auth.userpools="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.amazonaws.mobile.auth.userpools.SignUpConfirmActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <com.amazonaws.mobile.auth.userpools.SignUpConfirmView
        android:id="@+id/signup_confirm_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_pools_form_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sign_up_confirm_title"
            android:textColor="@android:color/white"
            android:id="@+id/confirm_account_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_pools_intra_group_separation"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:text="@string/sign_up_confirm_code_sent"
            android:id="@+id/confirm_account_message1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_pools_intra_group_separation"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:text="@string/sign_up_confirm_enter_code"
            android:id="@+id/confirm_account_message2" />

        <com.amazonaws.mobile.auth.userpools.FormView
            android:id="@+id/signup_confirm_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_pools_form_margin"
            android:layout_marginBottom="@dimen/user_pools_form_margin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_pools_button_height"

            android:text="@string/sign_up_confirm_text"
            android:textAllCaps="false"
            android:textSize="@dimen/user_pools_button_text_size"
            android:textColor="@android:color/white"
            android:id="@+id/confirm_account_button"
            android:onClick="confirmAccount"/>
    </com.amazonaws.mobile.auth.userpools.SignUpConfirmView>

</LinearLayout>