<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:com.amazonaws.mobile.auth.userpools="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.amazonaws.mobile.auth.userpools.MFAActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <com.amazonaws.mobile.auth.userpools.MFAView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mfa_view">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_pools_form_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:text="@string/mfa_header"
            android:id="@+id/mfa_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_pools_intra_group_separation"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:text="@string/mfa_code_sent_message"
            android:id="@+id/mfa_message" />

        <com.amazonaws.mobile.auth.userpools.FormView
            android:id="@+id/mfa_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_pools_form_margin"
            android:layout_marginBottom="@dimen/user_pools_form_margin" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_pools_button_height"
            android:text="@string/verify_button_text"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/user_pools_button_text_size"
            android:id="@+id/mfa_button"
            android:onClick="verify"/>
    </com.amazonaws.mobile.auth.userpools.MFAView>

</LinearLayout>