<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:com.amazonaws.mobile.auth.userpools="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amazonaws.mobile.auth.userpools.ForgotPasswordActivity"
    android:gravity="center_horizontal">

    <com.amazonaws.mobile.auth.userpools.ForgotPasswordView
        android:id="@+id/forgot_password_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_pools_form_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:text="@string/forgot_password_header"
            android:id="@+id/forgot_password_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_pools_intra_group_separation"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:text="@string/forgot_password_body"
            android:id="@+id/forgot_password_message" />

        <com.amazonaws.mobile.auth.userpools.FormView
            android:id="@+id/forgot_password_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_pools_form_margin" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_pools_button_height"
            android:layout_marginTop="@dimen/user_pools_intra_group_separation"
            android:text="@string/forgot_password_button_hint"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/user_pools_button_text_size"
            android:id="@+id/forgot_password_button"
            android:onClick="forgotPassword"/>

    </com.amazonaws.mobile.auth.userpools.ForgotPasswordView>
</LinearLayout>